Write the corpus straight through its writable source, and drop the session
The corpus session PersistenceConfig connected served no reads; WriteQueueConsumer only wrote
through it. It cost a 34-document read at boot and a rebuild after every write, and a rebuild that
failed after the write landed made the queue re-apply the write, one more commit per retry, and
dead-letter it once rebuilds kept failing.

PersistenceConfig.skyBlockSession goes. WriteQueueConsumer takes the GitHubCorpus bean and holds
SkyBlockData.writing(corpus) as a Source.Writable in place of its JpaSession, and apply writes
through it, so the question the queue asks - did this write reach the origin - is the one the
source answers. The Spring constructor is @Autowired and delegates to a package-private one taking
any Source.Writable, which the test hands its recording origin. The javadoc of PersistenceConfig,
SimplifiedData and the context test, and CLAUDE.md, say there is no session and that starting the
context reads nothing from the corpus.

The service no longer proves at boot that the whole corpus parses and links, and a written row
that breaks linking is no longer noticed here; a reading session meets it at its next rebuild. A
write the queue reschedules still re-sends the rows it was enqueued with, so a retry can revert a
later write to the same row that lands during the backoff, and a write whose response was lost
after it landed is still retried as a failed one.

Tests: WriteQueueConsumerTest hands RecordingOrigin to the consumer directly, with no session
between them. The origin fails any read, so every case also pins that the write path reads
nothing. aDrainedWriteRebuildsWhatLinksIntoIt goes: what a write rebuilds is a session's rule, and
persistence pins it in JpaSessionRebuildTest.aWriteRelinksItsDependents. The applied list is read
with getFirst().

> #### The queue re-applied a write that had landed
> WriteQueueConsumer wrote through a JpaSession, whose write threw when the rebuil